--- a/challenge_4/style.css
+++ b/challenge_4/style.css
@@ -1,3 +1,12 @@
 body{
-    color: #A9B7C0;
+    background-color: #A9B7C0;
+}
+.card{
+    background-color: #EFD9C1;
+}
+.jumbotron{
+    background-color: #CCCBC6;
+}
+.form-inline{
+    float:left;
 }
