--- a/challenge_6/style.css
+++ b/challenge_6/style.css
@@ -24,3 +24,12 @@ h4{
 .bandtext{
     color:white;
 }
+.jumbotron{
+    background:black;
+}
+body{
+    background-color: #494E6B;
+}
+.modal{
+    color:black;
+}
