--- a/brickBreaker/style.css
+++ b/brickBreaker/style.css
@@ -1,4 +1,10 @@
 canvas{
     border-style: solid;
     border-width: 1.5px;
+    background: #eee; 
+    margin:0 auto;
+}
+*{
+    padding:0; 
+    margin:0;
 }
