--- a/FINAL final project/style.css
+++ b/FINAL final project/style.css
@@ -60,7 +60,7 @@
 #signIn{
  background-color: rgba(0, 0, 0, 0.7);
  color:white;
- height:100%;
+ height:700px;
 }
 #top{
  font-family:Verdana, Geneva, sans-serif
